--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "npm-package-test",
-  "version": "1.0.0",
-  "description": "package-test",
+  "name": "fly-vue-player",
+  "version": "1.0.1",
+  "description": "audio player based on vue.js and iview2.x",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
